--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.8.6",
+    "react-bulma-components": "3.0.1-3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0"
   },
